# HolidayPlanner

./: .env  .gitignore  README.md  app.py  dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
HolidayAgent/: config.py
HolidayAgent/Agents/: Planner.py  Researcher.py
HolidayAgent/Prompts/: planner_prompt.txt  researcher_prompt.txt
HolidayAgent/Tools/: GoogleMap.py  SerperTool.py  TavilyTool.py
HolidayAgent/core/: holiday_exception.py  logger.py
HolidayAgent/utils/: __init__.py
Notebooks/: autogenAgents.ipynb  autogen_setup.ipynb  experiment.py  experiments.ipynb  tools_experimentation.ipynb
