[project]
name = "TravelBot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogen>=0.11.1",
    "autogen-agentchat>=0.7.5",
    "autogen-ext>=0.7.5",
    "dataclasses>=0.8",
    "fastapi>=0.129.1",
    "googlemaps>=4.10.0",
    "ipykernel>=7.2.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.17",
    "openai>=2.21.0",
    "python-dotenv>=1.2.1",
    "tavily>=1.1.0",
    "uvicorn>=0.41.0",
]
[tool.setuptools.packages.find]
include= ["HolidayAgent*"]
exclude=["logs*","Notebooks*"]
